--- a/Blazor/Components/Pages/CameraCapture.razor
+++ b/Blazor/Components/Pages/CameraCapture.razor
@@ -28,12 +28,15 @@
         {
             <MudText Typo="Typo.subtitle1">Captured Photo(s):</MudText>
             <MudGrid>
-                @foreach (var img in capturedImages)
+                @foreach (var (img, index) in capturedImages.Select((img, i) => (img, i)))
                 {
-                    <MudItem xs="6" sm="4" md="3">
-                        <MudPaper Class="pa-1 ma-1 d-flex justify-center" Style="background:#f5f5f5;">
-                            <img src="@img" alt="Captured" style="width:100%; border-radius:8px;" />
-                        </MudPaper>
+                    <MudItem xs="12" sm="6" md="4">
+                        <MudCard>
+                            <MudImage Src="@img" Alt="Captured" ObjectFit="ObjectFit.Cover" Height="200"/>
+                            <MudCardActions>
+                                <MudButton OnClick="@(() => RemovePhoto(index))" Color="Color.Error" Size="Size.Small">Remove</MudButton>
+                            </MudCardActions>
+                        </MudCard>
                     </MudItem>
                 }
             </MudGrid>
@@ -53,11 +56,15 @@
     private bool isCameraRunning = false;
     private List<string> capturedImages = new();
 
+    [Parameter]
+    public EventCallback<List<string>> OnImagesCaptured { get; set; }
+
     private async Task StartCamera()
     {
         await JS.InvokeVoidAsync("startCamera");
         isCameraRunning = true;
         capturedImages.Clear();
+        await OnImagesCaptured.InvokeAsync(capturedImages);
     }
 
     private async Task TakePhoto()
@@ -68,8 +75,11 @@
             if (!string.IsNullOrWhiteSpace(photoDataUrl))
             {
                 capturedImages.Add(photoDataUrl);
+                await JS.InvokeVoidAsync("setCapturedImages", capturedImages);
+                await OnImagesCaptured.InvokeAsync(capturedImages);
                 StateHasChanged();
-            } else
+            }
+            else
             {
                 Console.WriteLine("No photo returned from JS.");
             }
@@ -81,12 +91,25 @@
         catch (Exception ex)
         {
             Console.WriteLine($"Unexpected error: {ex}");
-            throw; // re-throw to catch in debugger
+            throw;
         }
     }
     
-    private void ClearPhotos()
+    private async Task RemovePhoto(int index)
+    {
+        if (index >= 0 && index < capturedImages.Count)
+        {
+            capturedImages.RemoveAt(index);
+            await JS.InvokeVoidAsync("setCapturedImages", capturedImages);
+            await OnImagesCaptured.InvokeAsync(capturedImages);
+            StateHasChanged();
+        }
+    }
+    
+    private async Task ClearPhotos()
     {
         capturedImages.Clear();
+        await JS.InvokeVoidAsync("setCapturedImages", capturedImages);
+        await OnImagesCaptured.InvokeAsync(capturedImages);
     }
 }
