--- a/Blazor/Pages/_Host.cshtml
+++ b/Blazor/Pages/_Host.cshtml
@@ -20,5 +20,6 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="js/camera.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html> 
