--- a/Blazor/Components/Pages/CreateIncident.razor
+++ b/Blazor/Components/Pages/CreateIncident.razor
@@ -87,8 +87,8 @@
                            buttonVariant="Variant.Filled"
                            startIcon="@Icons.Material.Filled.CloudUpload"
                            multiple="true"
-                           MaxSize="5242880"
-                           MaxSizeText="Maximum file size is 5MB"/>
+                           maxSize="5242880"
+                           maxSizeText="Maximum file size is 5MB"/>
             <CameraCapture OnImagesCaptured="HandleCapturedImages" />
             
             <MudButton Variant="Variant.Filled" 
