Added registration for both iOS and Android

--- a/Maui/AppShell.xaml
+++ b/Maui/AppShell.xaml
@@ -17,6 +17,10 @@
             Title="Login"
             ContentTemplate="{DataTemplate pages:LoginPage}"
             Route="login" />
+        <ShellContent
+            Title="Register"
+            ContentTemplate="{DataTemplate pages:RegistrationPage}"
+            Route="register" />
     </TabBar>
 
 </Shell>
