Fixed AllIncidents navigation for Admin and FieldEmployee roles

--- a/Maui/AppShell.xaml
+++ b/Maui/AppShell.xaml
@@ -49,7 +49,7 @@
                 <ShellContent.IsVisible>
                     <MultiBinding Converter="{StaticResource MultiBindingBoolConverter}">
                         <Binding Path="IsLoggedIn" />
-                        <Binding Path="TokenService" Converter="{StaticResource HasRoleConverter}" ConverterParameter="Admin" />
+                        <Binding Path="TokenService" Converter="{StaticResource HasRoleConverter}" ConverterParameter="Admin,FieldEmployee" />
                     </MultiBinding>
                 </ShellContent.IsVisible>
             </ShellContent>
